duck/test/fail/if-right.duck
import base

-- Verify that we can feed a Void expression through the right side
-- of an if without producing a Void type.

loop x = loop x

_ = 1 + \if True then () else loop ()
